k8s/applications/ai/perplexica/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: perplexica
  namespace: perplexica
  labels:
    app.kubernetes.io/name: perplexica
    app.kubernetes.io/version: "1.11.2"
spec:
  parentRefs:
    - name: external
      namespace: gateway
    - name: internal
      namespace: gateway
  hostnames:
    - perplexica.pc-tips.se
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: perplexica
          namespace: perplexica
          port: 3000
          weight: 100
